--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "teeworlds_ping_": "./teeworlds_ping_",
     "teeworlds_players_": "./teeworlds_players_"
   },
+  "scripts": {
+    "current": "ncu --upgrade --upgradeAll"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/chuck-norris-network/munin-teeworlds.git"
@@ -24,6 +27,7 @@
     "teeworlds-info": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^2.10.0"
+    "eslint": "^2.10.0",
+    "npm-check-updates": "^2.10.3"
   }
 }
